--- a/Zane-csp/Base.lproj/Main.storyboard
+++ b/Zane-csp/Base.lproj/Main.storyboard
@@ -149,10 +149,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Vf2-sC-9JY"/>
                     </view>
+                    <connections>
+                        <outlet property="textView" destination="nwD-Yy-wxS" id="TAN-gw-ZpG"/>
+                        <outlet property="webViewer" destination="EEp-f1-yTh" id="k74-Il-w3V"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CcG-e2-e1L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="440.80000000000001" y="2083.8080959520244"/>
+            <point key="canvasLocation" x="545" y="2262"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="tZ6-Uj-CxS">
@@ -170,9 +174,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="CqD-E2-EBC" kind="show" id="hXg-RC-T9z"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -357,6 +358,39 @@
             </objects>
             <point key="canvasLocation" x="25" y="-373"/>
         </scene>
+        <!--Gloal Impact View Controller-->
+        <scene sceneID="JNa-hE-2hq">
+            <objects>
+                <viewController id="FUy-Js-udx" customClass="GloalImpactViewController" customModule="Zane_csp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7SR-eM-W7O">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpm-Ng-QzO">
+                                <rect key="frame" x="-78" y="165" width="2112" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">This app will allow doctors to prioritize the patients based off of their need of help. The app will allow the doctors to learn more information about their patients. It will allow local organizations to more effectively distribute Regional antiretroviral therapy and other types of therapy</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t6p-t2-pMc">
+                                <rect key="frame" x="67" y="307" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QPf-Ok-Ywe">
+                                <rect key="frame" x="67" y="488" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="WIV-tZ-mJb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="evI-cU-K7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="746" y="11"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Image" width="2556" height="1440"/>
@@ -365,7 +399,4 @@
         <image name="bytecode" width="254" height="198"/>
         <image name="javaSample" width="1126" height="754"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="mG6-d2-m1u"/>
-    </inferredMetricsTieBreakers>
 </document>
