--- a/Zane-csp/Sounds/View/Base.lproj/Main.storyboard
+++ b/Zane-csp/Sounds/View/Base.lproj/Main.storyboard
@@ -21,9 +21,6 @@
                                 <rect key="frame" x="164" y="440" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <connections>
-                                    <segue destination="dTZ-ft-59O" kind="show" id="vay-7n-eNj"/>
-                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="SRa-fS-B1y">
                                 <rect key="frame" x="67" y="226" width="240" height="128"/>
@@ -50,6 +47,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jvb-Xy-dmz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1601" y="-372"/>
+        </scene>
+        <!--Programming View Controller-->
+        <scene sceneID="NIl-XV-tbR">
+            <objects>
+                <viewController id="ddW-Zl-3Nh" customClass="ProgrammingViewController" customModule="Zane_csp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dcI-8e-oOc" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="kh5-Qv-QOA"/>
+                    </view>
+                    <connections>
+                        <segue destination="dTZ-ft-59O" kind="show" id="FeB-HG-zId"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vyt-nS-PGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1652" y="716"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="sUn-sP-JKv">
